--- a/ITLA_PE_MVC.ENTITY/ITLA_PE_MVC.ENTITY.csproj
+++ b/ITLA_PE_MVC.ENTITY/ITLA_PE_MVC.ENTITY.csproj
@@ -52,6 +52,9 @@
     <Compile Include="GetMateriasDisponibles_Result.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
+    <Compile Include="Log.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
     <Compile Include="LoginSession.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
