--- a/ITLA_PE_MVC/ITLA_PE_MVC.csproj
+++ b/ITLA_PE_MVC/ITLA_PE_MVC.csproj
@@ -386,6 +386,9 @@
     <Content Include="Views\Solicitudes\Find.cshtml" />
     <Content Include="Views\Solicitudes\Create2.cshtml" />
     <Content Include="Views\Shared\_LayoutFull.cshtml" />
+    <Content Include="Views\Solicitudes\Modified.cshtml" />
+    <Content Include="Views\Solicitudes\GenerateLinks.cshtml" />
+    <Content Include="Views\Solicitudes\LinkSend.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
