--- a/ITLA_PE_MVC.DATA/App.config
+++ b/ITLA_PE_MVC.DATA/App.config
@@ -15,6 +15,12 @@
     </providers>
   </entityFramework>
   <connectionStrings>
+    <add name="ORBIPEEntities" connectionString="metadata=res://*/ORBIPE.csdl|res://*/ORBIPE.ssdl|res://*/ORBIPE.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=70.35.196.206;initial catalog=ORBIPE;user id=sa;password=MyN0KroT@..19Q2;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--
     <add name="ORBIPEEntities" connectionString="metadata=res://*/ORBIPE.csdl|res://*/ORBIPE.ssdl|res://*/ORBIPE.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=40.70.21.90;initial catalog=ORBIPE;user id=auditoria;password=@uDit0R1@Itl@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ORBIPEEntities" connectionString="metadata=res://*/ORBIPE.csdl|res://*/ORBIPE.ssdl|res://*/ORBIPE.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=40.70.21.90;initial catalog=ORBIPE;user id=auditoria;password=@uDit0R1@Itl@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    -->
+
+
   </connectionStrings>
 </configuration>
