--- a/ITLA_PE_MVC.SERVICE/ITLA_PE_MVC.SERVICE.csproj
+++ b/ITLA_PE_MVC.SERVICE/ITLA_PE_MVC.SERVICE.csproj
@@ -49,9 +49,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceLayer.cs" />
     <Compile Include="ServicesDashboard.cs" />
     <Compile Include="ServiceSecurity.cs" />
+    <Compile Include="ServicesLayer.cs" />
     <Compile Include="ServicesRequest.cs" />
+    <Compile Include="ServicioJuventudADM.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
