--- a/ITLA_PE_PORTALADMIN/Web.config
+++ b/ITLA_PE_PORTALADMIN/Web.config
@@ -14,6 +14,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
