Dashboard Intencion montado con parte de la DATA

--- a/ITLA_PE_MVC.ENTITY/ITLA_PE_MVC.ENTITY.csproj
+++ b/ITLA_PE_MVC.ENTITY/ITLA_PE_MVC.ENTITY.csproj
@@ -107,6 +107,15 @@
     <Compile Include="UspGetCarrera_Result.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
+    <Compile Include="UspGetDashboardIntencionArea_Result.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UspGetDashboardIntencionEdad_Result.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UspGetDashboardIntencionIngresos_Result.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
     <Compile Include="UspGetDashboardIntencionProvincia_Result.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
