--- a/ITLA_PE_MVC.SERVICE/ITLA_PE_MVC.SERVICE.csproj
+++ b/ITLA_PE_MVC.SERVICE/ITLA_PE_MVC.SERVICE.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ServicesLayer.cs" />
     <Compile Include="ServicesRequest.cs" />
     <Compile Include="ServicioJuventudADM.cs" />
+    <Compile Include="UspGetDashboardIntencionIngresos_Result.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
