Archivos del Dashboard Intencion completados. Pendiente verificar los graficos...

--- a/ITLA_PE_MVC.ENTITY/ITLA_PE_MVC.ENTITY.csproj
+++ b/ITLA_PE_MVC.ENTITY/ITLA_PE_MVC.ENTITY.csproj
@@ -110,6 +110,9 @@
     <Compile Include="UspGetDashboardIntencionArea_Result.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
+    <Compile Include="UspGetDashboardIntencionDia_Result.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
     <Compile Include="UspGetDashboardIntencionEdad_Result.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
