AVANCES EN LA PAGINA HOME, PARA MOSTRAR LA DATA DE INSCRITOS DE CUALQUIER CICLO

--- a/ITLA_PE_PORTALADMIN/ITLA_PE_PORTALADMIN.csproj
+++ b/ITLA_PE_PORTALADMIN/ITLA_PE_PORTALADMIN.csproj
@@ -50,7 +50,7 @@
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="INFONETWORK.COMMONS">
-      <HintPath>D:\INFONETWORK.COMMONS.dll</HintPath>
+      <HintPath>..\..\..\..\..\Desktop\INFONETWORK.COMMONS.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Web.DynamicData" />
