CARGA ARCHIVO A LA BD. (PENDIENTE CAMPO CLAVE)

--- a/ITLA_PE_MVC.DATA/App.config
+++ b/ITLA_PE_MVC.DATA/App.config
@@ -1,30 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework"
-    type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-    requirePermission="false"/>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb"/>
+        <parameter value="mssqllocaldb" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ORBIPEEntities"
-      connectionString="metadata=res://*/ORBIPE.csdl|res://*/ORBIPE.ssdl|res://*/ORBIPE.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=70.35.196.206;initial catalog=ORBIPE;user id=sa;password=MyN0KroT@..19Q2;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient"/>
     <!--
     <add name="ORBIPEEntities" connectionString="metadata=res://*/ORBIPE.csdl|res://*/ORBIPE.ssdl|res://*/ORBIPE.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=40.70.21.90;initial catalog=ORBIPE;user id=auditoria;password=@uDit0R1@Itl@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ORBIPEEntities" connectionString="metadata=res://*/ORBIPE.csdl|res://*/ORBIPE.ssdl|res://*/ORBIPE.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=40.70.21.90;initial catalog=ORBIPE;user id=auditoria;password=@uDit0R1@Itl@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     -->
-
-
+    <add name="ORBIPEEntities" connectionString="metadata=res://*/ORBIPE.csdl|res://*/ORBIPE.ssdl|res://*/ORBIPE.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=70.35.196.206;initial catalog=ORBIPE;user id=sa;password=MyN0KroT@..19Q2;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HorasLogEntities" connectionString="metadata=res://*/HorasLog.csdl|res://*/HorasLog.ssdl|res://*/HorasLog.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=70.35.196.206;initial catalog=HorasLog;persist security info=True;user id=sa;password=MyN0KroT@..19Q2;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
