--- a/ITLA_PE_MVC.DATA/ITLA_PE_MVC.DATA.csproj
+++ b/ITLA_PE_MVC.DATA/ITLA_PE_MVC.DATA.csproj
@@ -53,6 +53,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HorasLog.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HorasLog.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="HorasLog.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HorasLog.tt</DependentUpon>
+    </Compile>
+    <Compile Include="HorasLog.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HorasLog.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="MEETLOGDOCENTE.cs">
+      <DependentUpon>HorasLog.tt</DependentUpon>
+    </Compile>
     <Compile Include="ORBIPE.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -71,12 +89,29 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>ORBIPE.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <EntityDeploy Include="HorasLog.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>HorasLog.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="HorasLog.edmx.diagram">
+      <DependentUpon>HorasLog.edmx</DependentUpon>
+    </None>
     <None Include="ORBIPE.edmx.diagram">
       <DependentUpon>ORBIPE.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="HorasLog.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>HorasLog.edmx</DependentUpon>
+      <LastGenOutput>HorasLog.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="HorasLog.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>HorasLog.edmx</DependentUpon>
+      <LastGenOutput>HorasLog.cs</LastGenOutput>
+    </Content>
     <Content Include="ORBIPE.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>ORBIPE.edmx</DependentUpon>
