CAMPO CLAVE ESTABLECIDO (PENDIENTE QUE IGNORE LOS EXISTENTES Y SIGA INSERTANDO LOS NUEVOS)

--- a/ITLA_PE_MVC.ENTITY/ITLA_PE_MVC.ENTITY.csproj
+++ b/ITLA_PE_MVC.ENTITY/ITLA_PE_MVC.ENTITY.csproj
@@ -64,13 +64,18 @@
     <Compile Include="GetMateriasDisponibles_Result.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
+    <Compile Include="HorasLog.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HorasLog.tt</DependentUpon>
+    </Compile>
     <Compile Include="Intencion.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
     <Compile Include="LoginSession.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
-    <Compile Include="MEETLOGDOCENTE.cs">
+    <Compile Include="MeetLogDocente.cs">
       <DependentUpon>HorasLog.tt</DependentUpon>
     </Compile>
     <Compile Include="MODELS\ModelIntencion.cs" />
