--- a/ITLA_PE_PORTALADMIN/ITLA_PE_PORTALADMIN.csproj
+++ b/ITLA_PE_PORTALADMIN/ITLA_PE_PORTALADMIN.csproj
@@ -120,6 +120,9 @@
     <Content Include="Content\css\simple-line-icons.css" />
     <Content Include="Content\css\simple-line-icons.min.css" />
     <Content Include="Content\css\solid.css" />
+    <Content Include="Content\font\webfonts\fa-brands-400.svg" />
+    <Content Include="Content\font\webfonts\fa-regular-400.svg" />
+    <Content Include="Content\font\webfonts\fa-solid-900.svg" />
     <Content Include="Content\images\.jpg.png" />
     <Content Include="Content\images\4.jpg" />
     <Content Include="Content\images\background-t.png" />
@@ -136,7 +139,9 @@
     <Content Include="Content\js\bootstrap.js" />
     <Content Include="Content\js\bootstrap.min.js" />
     <Content Include="Content\js\brands.js" />
+    <Content Include="Content\js\component.min.js" />
     <Content Include="Content\js\fontawesome.js" />
+    <Content Include="Content\js\foundation.min.js" />
     <Content Include="Content\js\gulpfile.js" />
     <Content Include="Content\js\jquery-3.5.1.js" />
     <Content Include="Content\js\jquery-3.5.1.min.js" />
@@ -144,8 +149,10 @@
     <Content Include="Content\js\mdb.js" />
     <Content Include="Content\js\mdb.min.js" />
     <Content Include="Content\js\popper.min.js" />
+    <Content Include="Content\js\scripts.js" />
     <Content Include="Content\js\solid.js" />
     <Content Include="Content\js\vendors.min.js" />
+    <Content Include="Content\js\what-input.min.js" />
     <Content Include="Content\Login\css\all.min.css" />
     <Content Include="Content\Login\css\animate.css" />
     <Content Include="Content\Login\css\bootstrap-extended.min.css" />
@@ -198,6 +205,7 @@
     <Content Include="Content\Login\js\select2.min.js" />
     <Content Include="Content\Login\js\solid.js" />
     <Content Include="Content\Login\js\vendors.min.js" />
+    <Content Include="Content\webfonts\fa-solid-900.svg" />
     <Content Include="DashboardIntencion.aspx" />
     <Content Include="DashboardJueventud.aspx" />
     <Content Include="Global.asax" />
@@ -363,6 +371,22 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
+    <Content Include="Content\font\webfonts\fa-brands-400.eot" />
+    <Content Include="Content\font\webfonts\fa-brands-400.ttf" />
+    <Content Include="Content\font\webfonts\fa-brands-400.woff" />
+    <Content Include="Content\font\webfonts\fa-brands-400.woff2" />
+    <Content Include="Content\font\webfonts\fa-regular-400.eot" />
+    <Content Include="Content\font\webfonts\fa-regular-400.ttf" />
+    <Content Include="Content\font\webfonts\fa-regular-400.woff" />
+    <Content Include="Content\font\webfonts\fa-regular-400.woff2" />
+    <Content Include="Content\font\webfonts\fa-solid-900.eot" />
+    <Content Include="Content\font\webfonts\fa-solid-900.ttf" />
+    <Content Include="Content\font\webfonts\fa-solid-900.woff" />
+    <Content Include="Content\font\webfonts\fa-solid-900.woff2" />
+    <Content Include="Content\webfonts\fa-solid-900.eot" />
+    <Content Include="Content\webfonts\fa-solid-900.ttf" />
+    <Content Include="Content\webfonts\fa-solid-900.woff" />
+    <Content Include="Content\webfonts\fa-solid-900.woff2" />
     <None Include="packages.config" />
     <Content Include="SiteMain.Master" />
     <None Include="Web.Debug.config">
@@ -391,7 +415,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\font\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
@@ -420,7 +443,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>56585</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://localhost:44345/</IISUrl>
+          <IISUrl>https://localhost:44346/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
