--- a/ITLA_PE_PORTALADMIN/Web.config
+++ b/ITLA_PE_PORTALADMIN/Web.config
@@ -86,7 +86,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="ORBIPEEntities"
-      connectionString="metadata=res://*/ORBIPE.csdl|res://*/ORBIPE.ssdl|res://*/ORBIPE.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=108.175.10.88;initial catalog=ORBIPE;user id=sa;password=pro123!@#;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      connectionString="metadata=res://*/ORBIPE.csdl|res://*/ORBIPE.ssdl|res://*/ORBIPE.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=74.208.216.77;initial catalog=ORBIPE;user id=AdminItla;password=3mblem99f.Q2.13;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient"/>
     <!--
     <add name="HorasLogEntities2" connectionString="metadata=res://*/HorasLog.csdl|res://*/HorasLog.ssdl|res://*/HorasLog.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=70.35.196.206;initial catalog=HorasLog;persist security info=True;user id=sa;password=MyN0KroT@..19Q2;MultipleActiveResultSets=True;App=EntityFramework&quot;" 
