--- a/ITLA_PE_PORTALADMIN/ITLA_PE_PORTALADMIN.csproj
+++ b/ITLA_PE_PORTALADMIN/ITLA_PE_PORTALADMIN.csproj
@@ -265,6 +265,7 @@
     <Content Include="DashboardAdmision.aspx" />
     <Content Include="DashboardIntencion.aspx" />
     <Content Include="DashboardJueventud.aspx" />
+    <Content Include="DashboardServiciosRegistro.aspx" />
     <Content Include="Dialogs\EntregarServisioAEstudiante.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Home.aspx" />
@@ -272,6 +273,8 @@
     <Content Include="Login.aspx" />
     <Content Include="PrevalidacionJuventud.aspx" />
     <Content Include="PrevalidacionJuventudDetalle.aspx" />
+    <Content Include="ReporteCondicionAcademica.aspx" />
+    <Content Include="ReporteServiciosEntregados.aspx" />
     <Content Include="Reporte\ReporteDetalleIntencion.aspx" />
     <Content Include="Reporte\ReporteDetallePorAgenda.aspx" />
     <Content Include="Web.config" />
@@ -394,6 +397,13 @@
     <Compile Include="DashboardJueventud.aspx.designer.cs">
       <DependentUpon>DashboardJueventud.aspx</DependentUpon>
     </Compile>
+    <Compile Include="DashboardServiciosRegistro.aspx.cs">
+      <DependentUpon>DashboardServiciosRegistro.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="DashboardServiciosRegistro.aspx.designer.cs">
+      <DependentUpon>DashboardServiciosRegistro.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\EntregarServisioAEstudiante.aspx.cs">
       <DependentUpon>EntregarServisioAEstudiante.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -450,6 +460,20 @@
       <DependentUpon>PrevalidacionJuventudDetalle.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReporteCondicionAcademica.aspx.cs">
+      <DependentUpon>ReporteCondicionAcademica.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ReporteCondicionAcademica.aspx.designer.cs">
+      <DependentUpon>ReporteCondicionAcademica.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ReporteServiciosEntregados.aspx.cs">
+      <DependentUpon>ReporteServiciosEntregados.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ReporteServiciosEntregados.aspx.designer.cs">
+      <DependentUpon>ReporteServiciosEntregados.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Reporte\ReporteDetalleIntencion.aspx.cs">
       <DependentUpon>ReporteDetalleIntencion.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
