--- a/ITLA_PE_MVC.ENTITY/ITLA_PE_MVC.ENTITY.csproj
+++ b/ITLA_PE_MVC.ENTITY/ITLA_PE_MVC.ENTITY.csproj
@@ -55,6 +55,12 @@
     <Compile Include="Area.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
+    <Compile Include="BecasJuventud.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CalculateAgeInYears_Result.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
     <Compile Include="DashboardGeneroPorPeriodo_Result.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
@@ -79,11 +85,17 @@
     <Compile Include="MateriaGrupoNuevo.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
+    <Compile Include="MJ20201012.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
     <Compile Include="MODELS\ModelIntencion.cs" />
     <Compile Include="MODELS\ModelSolicituds.cs" />
     <Compile Include="ORBIPE.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OrbiServicioEntrega.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
     <Compile Include="PARTIAL\SolicitudAnexo.cs" />
@@ -97,20 +109,35 @@
     <Compile Include="ProyectoEspecialMateriaGrupoSolicitud.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
-    <Compile Include="Reporte_Inscritos_Seleccion_XCarrera_Cuatrimestre_Any_Result.cs">
+    <Compile Include="ProyectoEspecialMateriaGrupoSolicitud20201015.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ReporteGSuit.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
     <Compile Include="RUNTIME\RunTimeHelper.cs" />
+    <Compile Include="Secuence.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
     <Compile Include="Setting.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
     <Compile Include="Solicitud.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
+    <Compile Include="Solicitud20201012.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Solicitud20201015.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
     <Compile Include="SolicitudAnexo.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
     <Compile Include="SystemAttribute.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TraceTable20201117.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
     <Compile Include="User.cs">
@@ -126,9 +153,6 @@
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
     <Compile Include="UserType.cs">
-      <DependentUpon>ORBIPE.tt</DependentUpon>
-    </Compile>
-    <Compile Include="UspBuscaServicioRegistro_Result.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
     <Compile Include="UspGenericItems_Result.cs">
@@ -221,6 +245,9 @@
     <Compile Include="UspGetDashboardITLAJVProvincia_Result.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
+    <Compile Include="UspGetDashboardRegistroCondicionAcademica_Result.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
     <Compile Include="UspGetLoginInfo_Result.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
@@ -242,18 +269,39 @@
     <Compile Include="UspReporteInscritosSeleccionXFecha_Result.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
+    <Compile Include="UspReporteInscritosSeleccionXGeneroCuatrimestre_Result.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UspReporteInscritosSeleccionXGeneroNuevosViejosCuatrimestre_Result.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UspReporteInscritosSeleccionXGeneroYCarreraCuatrimestre_Result.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UspReporteInscritosSeleccionXPaisCuatrimestre_Result.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UspReporteInscritosSeleccionXProvinciaCuatrimestre_Result.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
     <Compile Include="UspReporteIntencion_Result.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
-    <Compile Include="UspReporteServiciosRegistro_Result.cs">
+    <Compile Include="UspReporteUsoORBI_Result.cs">
       <DependentUpon>ORBIPE.tt</DependentUpon>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="ORBIPE.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ORBIPE.cs</LastGenOutput>
-    </Content>
+    <Compile Include="UspServicioRegistroBusqueda_Result.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UspServicioRegistroReporteEntregado_Result.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UspServicioRegistroReporteRangoFecha_Result.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UspServicioRegistroReporteSolicitado_Result.cs">
+      <DependentUpon>ORBIPE.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
@@ -261,6 +309,12 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ORBIPE.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ORBIPE.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
